Fix video controls not working due to z-index issue

--- a/weed.css
+++ b/weed.css
@@ -198,6 +198,7 @@ header {
     padding-top: 56.25%; /* 16:9 Aspect Ratio */
     background-color: var(--pure-black);
     overflow: hidden;
+    z-index: 3;
 }
 
 .thumbnails {
